# DOFBOT_SE_RobotArm_Control

./: .gitignore  README.md
dofbot_c++/: Arm_Lib.cpp  Arm_Lib.h  CMakeLists.txt  beep.cpp  cli_args.cpp  cli_args.h  ctrl_all.cpp  ctrl_all_servo.cpp  ctrl_servo.cpp  dance.cpp  left_right.cpp  read_servo.cpp  test.ipynb
dofbot_python/: beep.py  cli_args.py  ctrl_all_servo.py  ctrl_servo.py  dance.py  left_right.py  read_servo.py  setup.py
dofbot_python/Arm_Lib/: Arm_Lib.py
